<resources>
    <string name="app_name">SMART SHARE</string>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">USER NAME</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_account_register_now">Don\'t have account? Register now</string>
    <string name="my_account">My Account</string>
    <string name="department">Department</string>
    <string name="contact_us">Contact US</string>
    <string name="about_us">About Us</string>
    <string name="share">Share</string>
</resources>
