<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/user"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_department"
            android:icon="@drawable/department"
            android:title="@string/department" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/contactus"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/aboutus"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share"
            android:title="@string/share" />
    </group>
</menu>
